@@ -632,6 +632,7 @@ Resistances:  -- weapons get reduced % damage per round, lvl based, with limits.
 Resistances: spell chant song prayer thief_skill (ability types) \n\r\
 Resistances: enchantment/charm kicking vexing conjuration (ability domains)\n\r\
 Immunities : teleport (includes gate, summon) holy disease poison\n\r\
+Misc       : debug-duration (pct is the maximum debuf ticks remain)\n\r\
 \n\r\
 The parameters may also END with the key word MASK= followed by a mask.  This \
 mask will select which kinds of mobs and players will be affected by this property. \
@@ -1516,11 +1517,26 @@ completely from scratch, and potentially re-pick their class.
 PROP_RESISTANCE=\
 Property   : Prop_Resistance\n\r\
 Targets    : MOB\n\r\
-Parameters : see Prop_HaveResister\n\r\
-Example    : see Prop_HaveResister\n\r\
+Parameters : resistance names followed by percentages\n\r\
+Parameters : Parameters may be followed by an optional mask\n\r\
+Example    : magic 50% poison -10%\n\r\
+Example    : magic poison 50% pierce -10% MASK=-RACE +Dwarf\n\r\
 Description: \n\r\
-Gives a mob natural resistances and immunities. See Prop_HaveResister for more \
-information. 
+Gives a mob natural resistances and immunities. \
+The effects which may be included are: \n\r\
+Resistances: gas fire electricity mind magic cold acid water evil (undead) \n\r\
+Resistances: justice (as per many thief abilities) \n\r\
+Resistances: weapons blunt pierce slash non-magical-weapons non-silver-weapons\n\r\
+Resistances:  -- weapons get reduced % damage per round, lvl based, with limits.\n\r\
+:          :  -- always modifier makes weapon resists always work, no limits.\n\r\
+Resistances: spell chant song prayer thief_skill (ability types) \n\r\
+Resistances: enchantment/charm kicking vexing conjuration (ability domains)\n\r\
+Immunities : teleport (includes gate, summon) holy disease poison\n\r\
+Misc       : debug-duration (pct is the maximum debuf ticks remain)\n\r\
+\n\r\
+The parameters may also END with the key word MASK= followed by a mask.  This \
+mask will select which kinds of mobs and players will be affected by this property. \
+See ZAPPERMASKS for more information on zapper mask syntax.
 
 PROP_RESTRICTSKILLS=\
 Property   : Prop_RestrictSkills\n\r\
@@ -1600,13 +1616,28 @@ See ZAPPERMASKS for more information on zapper mask syntax.
 PROP_RIDERESISTER=\
 Property   : Prop_RideResister\n\r\
 Targets    : Items and Mobs\n\r\
-Parameters : see Prop_HaveResister\n\r\
-Example    : see Prop_HaveResister\n\r\
+Parameters : resistance names followed by percentages\n\r\
+Parameters : Parameters may be followed by an optional mask\n\r\
+Example    : magic 50% poison -10%\n\r\
+Example    : magic poison 50% pierce -10% MASK=-RACE +Dwarf\n\r\
 Description: \n\r\
 Whenever the item having this property is mounted or ridden, the rider gains \
 certain resistances and immunities described in the parameters.  When exited, \
-the resistances and immunities are also cancelled.  See Prop_HaveResister for \
-more information on valid parameters for this property. 
+the resistances and immunities are also cancelled.  \
+The effects which may be included are: \n\r\
+Resistances: gas fire electricity mind magic cold acid water evil (undead) \n\r\
+Resistances: justice (as per many thief abilities) \n\r\
+Resistances: weapons blunt pierce slash non-magical-weapons non-silver-weapons\n\r\
+Resistances:  -- weapons get reduced % damage per round, lvl based, with limits.\n\r\
+:          :  -- always modifier makes weapon resists always work, no limits.\n\r\
+Resistances: spell chant song prayer thief_skill (ability types) \n\r\
+Resistances: enchantment/charm kicking vexing conjuration (ability domains)\n\r\
+Immunities : teleport (includes gate, summon) holy disease poison\n\r\
+Misc       : debug-duration (pct is the maximum debuf ticks remain)\n\r\
+\n\r\
+The parameters may also END with the key word MASK= followed by a mask.  This \
+mask will select which kinds of mobs and players will be affected by this property. \
+See ZAPPERMASKS for more information on zapper mask syntax.
 
 PROP_RIDESPELLCAST=\
 Property   : Prop_RideSpellCast\n\r\
@@ -2367,7 +2398,11 @@ Valid masking parameters include:  \n\r\
 PROP_WEARRESISTER=\
 Property   : Prop_WearResister\n\r\
 Targets    : Items (armor and weapons principally)\n\r\
-Parameters : see Prop_HaveResister, and may include optional LAYERED flag\n\r\
+Parameters : resistance names followed by percentages\n\r\
+Parameters : Parameters may be followed by an optional mask\n\r\
+Parameters : May include optional LAYERED flag\n\r\
+Example    : magic 50% poison -10%\n\r\
+Example    : magic poison 50% pierce -10% MASK=-RACE +Dwarf\n\r\
 Example    : magic 50% poison -10%\n\r\
 Example    : magic 50% poison -10% LAYERED MASK=-RACE +Dwarf\n\r\
 Description: \n\r\
@@ -2375,7 +2410,20 @@ Whenever the item having this property is wielded or worn, the owner gains \
 certain resistances and immunities described in the parameters.  When removed, \
 the resistances and immunities are also cancelled.  The Layered flag may be used to prevent \
 resistance stacking due to multiple items worn on the same location. \
-See Prop_HaveResister for more information on the valid parameters for this property.   
+The effects which may be included are: \n\r\
+Resistances: gas fire electricity mind magic cold acid water evil (undead) \n\r\
+Resistances: justice (as per many thief abilities) \n\r\
+Resistances: weapons blunt pierce slash non-magical-weapons non-silver-weapons\n\r\
+Resistances:  -- weapons get reduced % damage per round, lvl based, with limits.\n\r\
+:          :  -- always modifier makes weapon resists always work, no limits.\n\r\
+Resistances: spell chant song prayer thief_skill (ability types) \n\r\
+Resistances: enchantment/charm kicking vexing conjuration (ability domains)\n\r\
+Immunities : teleport (includes gate, summon) holy disease poison\n\r\
+Misc       : debug-duration (pct is the maximum debuf ticks remain)\n\r\
+\n\r\
+The parameters may also END with the key word MASK= followed by a mask.  This \
+mask will select which kinds of mobs and players will be affected by this property. \
+See ZAPPERMASKS for more information on zapper mask syntax.
 
 PROP_WEARSPELLCAST=\
 Property   : Prop_WearSpellCast\n\r\
